adicionado barra de progresso estatica inicial

--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <img src="./assets/cover-1.jpg" alt="">
-        <h1></h1>
-        <p></p>
-        <span id="tempo_atual"></span>
-        <span id="tempo_total"></span>
-        <div id="progresso"></div>
-        <!-- <button id="selecionar_tempo"></button>
-        <button id="musica_anterior"></button>
-        <button id="play"></button>
-        <button id="musica_seguinte"></button> -->
+        <h1>Lost in the City Lights</h1>
+        <p>Cosmo Sheldrake</p>
+        <div id="tempos">
+            <span id="tempo_atual">02:23</span>
+            <span id="tempo_total">03:15</span>
+        </div>
+        <div id="barra_progresso_total"></div>
+        <div id="barra_progresso_atual"></div>
+        <!-- <button id="selecionar_tempo"></button> -->
+        <!-- <button id="musica_anterior"></button> -->
+        <!-- <button id="play"></button> -->
+        <!-- <button id="musica_seguinte"></button> -->
+        
     </main>
 <script src="script.js"></script>
 </body>
