salvando algumas configurações já realizadas e os icones e musicas a serem utilizadas nesse projeto

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
         </div>
         <div id="barra_progresso_total"></div>
         <div id="barra_progresso_atual"></div>
+        <!-- talvez seja melhor fazer com a tag de audio mas como nao sei estilizar ela ainda vou deixar aqui parada
+        <audio src="./assets/lost-in-city-lights-145038.mp3" autoplay controls>
+        </audio>  
+        -->
         <!-- <button id="selecionar_tempo"></button> -->
-        <!-- <button id="musica_anterior"></button> -->
-        <!-- <button id="play"></button> -->
-        <!-- <button id="musica_seguinte"></button> -->
+         <div id="controles">
+            <button id="musica_anterior"></button>
+            <button id="play"></button>
+            <button id="musica_seguinte"></button>
+        </div>
         
     </main>
 <script src="script.js"></script>
