criando um botao de pause svg com base em um botao play_pause

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
         -->
         <!-- <button id="selecionar_tempo"></button> -->
          <div id="controles">
-            <button id="musica_anterior"></button>
-            <button id="play"></button>
-            <button id="musica_seguinte"></button>
+            <button id="musica_anterior">
+                <img src="./assets/Stop_and_play_fill-1.svg" alt="">
+                
+            </button>
+            <button id="play" >
+                <img id="image_play"src="./assets/pause.svg" alt="">
+            </button>
+            <button id="musica_seguinte">
+                <img src="./assets/Stop_and_play_fill.svg" alt="">
+            </button>
         </div>
         
     </main>
