--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <img src="./assets/cover-1.jpg" alt="">
+        <img id="capa" src="./assets/cover-1.jpg" alt="">
         <h1>Lost in the City Lights</h1>
         <p>Cosmo Sheldrake</p>
         <div id="tempos">
@@ -27,14 +27,14 @@
         <!-- <button id="selecionar_tempo"></button> -->
          <div id="controles">
             <button id="musica_anterior">
-                <img src="./assets/Stop_and_play_fill-1.svg" alt="">
+                <img src="./assets/prev.svg" alt="">
                 
             </button>
-            <button id="play" >
-                <img id="image_play"src="./assets/pause.svg" alt="">
+            <button id="play" onclick="tocando()">
+                <img id="image_play"src="./assets/play.svg" alt="">
             </button>
             <button id="musica_seguinte">
-                <img src="./assets/Stop_and_play_fill.svg" alt="">
+                <img src="./assets/next.svg" alt="">
             </button>
         </div>
         
