projeto funcionando, agora irei buscar bugs e melhorias

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" cla>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PLayer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -32,7 +32,7 @@
             <button id="play" onclick="tocando()">
                 <img id="image_play"src="./assets/play.svg" alt="">
             </button>
-            <button id="musica_seguinte" onclick="proxima()">
+            <button id="musica_seguinte" onclick="tocar_proxima()">
                 <img src="./assets/next.svg" alt="">
             </button>
         </div>
