--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <img id="capa" src="./assets/cover-1.jpg" alt="">
+        <img id="capa" src="./assets/cover-1.jpg" alt="Capa do Album">
         <h1>Lost in the City Lights</h1>
         <p>Cosmo Sheldrake</p>
         <div id="tempos">
@@ -25,16 +25,16 @@
 
             <audio src="./assets/lost-in-city-lights.mp3"></audio>  
         
-            <button id="selecionar_tempo"></button>
+            <button id="selecionar_tempo" class="overlay"></button>
         </div>
          <div id="controles">
-            <button id="musica_anterior" onclick="tocar_anterior_reset()">
+            <button id="musica_anterior" name="musica_anterior" onclick="tocar_anterior_reset()">
                 <img src="./assets/prev.svg" alt="">
             </button>
-            <button id="play" onclick="tocando()">
+            <button id="play" name="play" onclick="tocando()">
                 <img id="image_play"src="./assets/play.svg" alt="">
             </button>
-            <button id="musica_seguinte" onclick="tocar_proxima()">
+            <button id="musica_seguinte" name="musica_seguinte" onclick="tocar_proxima()">
                 <img src="./assets/next.svg" alt="">
             </button>
         </div>
