clique na imagem adiciona modo beat

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <main>
-        <img id="capa" src="./assets/cover-1.jpg" alt="Capa do Album">
+        
+        <div class="capa_animada">
+            <img id="capa" src="./assets/cover-1.jpg" alt="Capa do Album">
+            <canvas id="frequencia"></canvas>
+        </div>
         <h1>Lost in the City Lights</h1>
         <p>Cosmo Sheldrake</p>
         <div id="tempos">
