--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
             <audio src="./assets/lost-in-city-lights.mp3"></audio>  
         
-            <button id="selecionar_tempo" class="overlay"></button>
+            <button id="selecionar_tempo" name="selecionar_tempo" class="overlay" aria-label="Selecione o Tempo"></button>
         </div>
          <div id="controles">
-            <button id="musica_anterior" name="musica_anterior" onclick="tocar_anterior_reset()">
+            <button id="musica_anterior" name="musica_anterior" onclick="tocar_anterior_reset()" aria-label="Musica anterior ou reiniciar música">
                 <img src="./assets/prev.svg" alt="">
             </button>
-            <button id="play" name="play" onclick="tocando()">
+            <button id="play" name="play" onclick="tocando()" aria-label="Tocar e Pausar">
                 <img id="image_play"src="./assets/play.svg" alt="">
             </button>
-            <button id="musica_seguinte" name="musica_seguinte" onclick="tocar_proxima()">
+            <button id="musica_seguinte" name="musica_seguinte" onclick="tocar_proxima()" aria-label="Próxima música">
                 <img src="./assets/next.svg" alt="">
             </button>
         </div>
